--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -1,5 +1,5 @@
-$color-clear-chill : "#1B9CFC";
-$color-keppel: "#58B19F";
+$color-clear-chill : #1B9CFC;
+$color-keppel: #58B19F;
 
 $color-primary: $color-clear-chill;
 $color-secondary: $color-keppel;
