--- a/src/components/Content.scss
+++ b/src/components/Content.scss
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 .content {
+    font-family: 'Roboto', sans-serif;
     background-color: #b33939;;
     a {
         color: #b33939;
+        text-decoration: none;
+    }
+    span {
+        letter-spacing: .02rem;
     }
     &__header {
         margin-bottom: -1rem;
@@ -17,7 +23,7 @@
         display: block;
         font-size: 22px;
         font-weight: bold;
-        letter-spacing: .1rem;
+        letter-spacing: .05rem;
     }
     &__position {
         display: block;
@@ -45,6 +51,9 @@
         padding: 1rem .5rem;
         background-color: white;
         margin-bottom: 2rem;
+        span {
+            margin-bottom: .15rem;
+        }
         &__title {
             display: block;
             font-weight: bold;
