--- a/src/components/Photo.scss
+++ b/src/components/Photo.scss
@@ -4,4 +4,11 @@
     background-position: center;
     background-size: cover;
     height: 300px;
+
+    &__filter {
+        background-color: rgba(black, 0.25);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
 }
