--- a/src/components/ProfileCard.scss
+++ b/src/components/ProfileCard.scss
@@ -1,4 +1,7 @@
 .profile-card {
+    padding: 2.5rem 0;
     max-width: 575px;
     margin: 0 auto;
+    background: rgb(183,21,64);
+background: radial-gradient(circle, rgba(183,21,64,1) 0%, rgba(12,36,97,1) 100%);
 }
