--- a/src/components/Content.scss
+++ b/src/components/Content.scss
@@ -1,13 +1,13 @@
-.content {
+.content {    
     &__header {
-        border-radius: 10px;
         padding: 0.5rem 1rem;
         position: relative;
-        background-color: white;
+        text-align: center;
+        color: white;
     }
     &__name {
         display: block;
-        font-size: 20px;
+        font-size: 22px;
         font-weight: bold;
         letter-spacing: .05rem;
     }
@@ -19,7 +19,7 @@
     }
     &__about {
         padding: 0.5rem 1rem;
-        background-color: white;
+        color: white;
         &__title {
             display: block;
             font-weight: bold;
@@ -30,11 +30,19 @@
     }
     &__contact {
         padding: 0.5rem 1rem;
-        background-color: white;
         margin-bottom: 1rem;
+        text-align: center;
+        color: white;
         span {
-            margin-bottom: .15rem;
+            background-color: rgba(black, 0.5);
+            border-radius: 5px;
+            margin-bottom: .2rem;
+            padding: .2rem 0;
         }
+        a {
+            color: white;
+        }
+
         &__title {
             display: block;
             font-weight: bold;
