--- a/src/components/Photo.scss
+++ b/src/components/Photo.scss
@@ -3,12 +3,18 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 300px;
+    
+    height: 140px;
+    width: 140px;
+    border-radius: 50%;
+    margin: 0 auto;
 
     &__filter {
         background-color: rgba(black, 0.25);
         position: absolute;
         width: 100%;
         height: 100%;
+        border-radius: 50%;
     }
+
 }
