--- a/src/components/Content.scss
+++ b/src/components/Content.scss
@@ -4,6 +4,7 @@
         position: relative;
         text-align: center;
         color: white;
+        margin-bottom: 1rem;
     }
     &__name {
         display: block;
@@ -20,6 +21,7 @@
     &__about {
         padding: 0.5rem 1rem;
         color: white;
+        margin-bottom: 1rem;
         &__title {
             display: block;
             font-weight: bold;
@@ -34,7 +36,7 @@
         text-align: center;
         color: white;
         span {
-            background-color: rgba(black, 0.5);
+            background-color: rgba(black, 0.35);
             border-radius: 5px;
             margin-bottom: .2rem;
             padding: .2rem 0;
